kubernetes/ingressroutes/whoami-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingressroute

spec:
  entryPoints:
    - http
  routes:
    - match: Host(`whoami.phpug.hh`)
      kind: Rule
      middlewares:
        - name: access-log@file
        - name: x-requestid@file
      services:
      - name: whoami-service
        kind: Service
        port: 80
